Add NewSend submission vertical, Pyramos onboarding guides, and code map
- newsend package: write-ahead journal, XSD validation, submission-id
  and manifest domain types, reflective transmit gateway, REST API
- 941 XSDs bundled under resources/schemas for offline validation
- Pyramos Reporting Agent onboarding, IdenTrust IGC cert, and W-2
  e-file research guides; CODE_MAP.md; CLAUDE.md updated for Pyramos
- IdenTrust public CA chain only; private key/CSR/certs stay ignored

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>