@@ -4,45 +4,55 @@ This file provides guidance to Claude Code (claude.ai/code) when working with co
 
 ## Project Overview
 
-Spring Boot application integrating IRS Modernized e-File (MeF) Client SDK v16 for Application-to-Application (A2A) communication with IRS MeF servers. The main project is located in `mef-spring-boot-integration/`.
+Spring Boot application (Java 17, Spring Boot 3.2.0, Maven) integrating the IRS Modernized e-File (MeF) Client SDK v16 for Application-to-Application (A2A) e-filing of employment tax returns (Form 94x family, primarily 941). Main code lives in `mef-spring-boot-integration/`.
 
-## Common Commands
+**Project phase (as of 2026-08):** The integration was originally built and proven against IRS ATS for **OneWell** (ETIN 97661 / EFIN 238689 / ASID 23868900 — all OneWell values, all being replaced). The project is now being re-implemented for **Pyramos Software LLC**, which holds the IRS **Reporting Agent** role and will e-file on behalf of *other companies*. That changes both the IRS enrollment (new EFIN/ETIN/ASID under Pyramos, Reporting Agent + Transmitter provider options) and the code (multi-tenant filers, `ReportingAgent` originator type, `ReportingAgentPINGrp` signature, per-client Form 8655 authorizations). See `CODE_MAP.md` for the code map and `mef-efiling-onboarding.html` for the end-to-end IRS onboarding guide.
 
-### Building and Running
+**Pyramos onboarding status:** the IdenTrust IGC device certificate is already issued (`Pyramos Software Certificates/`: `O=Pyramos Software LLC, CN=c2s.pahealthmanagement.org`, issued by IGC Device CA 2, valid 2026-08-21 → 2027-08-21). The e-file application (EFIN/ETIN), Automated Enrollment (ASID + cert registration), keystore wiring, and ATS re-testing are still to do.
 
-```bash
-# Navigate to project directory first
-cd "mef-spring-boot-integration"
+## Repository Layout
 
-# Build the project
-mvn clean package
+| Path | Contents |
+|---|---|
+| `mef-spring-boot-integration/` | The Spring Boot app |
+| `Version_16/A2A_Toolkit_Version16.0/` | IRS A2A Toolkit v16 — SDK JARs + IRS PDFs (Pub 5830, Strong Auth guide) |
+| `Version_15/` | Older toolkit, reference only |
+| `94x-2026/` | IRS 94x XSD schemas + business rules, 2026 Q1–Q4 (note quarterly version churn v1.0→v4.0) |
+| `test-scenarios/` | ATS test scenario PDFs, hand-built Return XML, 941 XSDs (see its README) |
+| `Pyramos Software Certificates/` | Pyramos IdenTrust cert material: private key, CSR, issued cert, CA chain |
+| `Root.txt`, `SubCA1.txt` | IdenTrust Global Common Root CA 1 + IGC Device CA 2 chain |
+| `create-pkcs12.sh`, `verify-pkcs12.sh` | Keystore assembly/verification (contain stale hardcoded paths — fix before use) |
+| `mef-efiling-onboarding.html` | 7-phase IRS MeF onboarding guide (e-Services → e-file app → cert → AE → keystore → ATS → PRD) |
+| `identrust-igc-certificate-guide.html` | IdenTrust IGC certificate deep-dive (CSR → PKCS12 → IRS registration) |
 
-# Skip tests during build
-mvn clean package -DskipTests
-
-# Run the application (requires Java 17)
-export JAVA_HOME=/opt/homebrew/opt/openjdk@17
-mvn spring-boot:run
-
-# Run packaged JAR
-java -jar target/mef-spring-boot-integration-1.0.0.jar
-```
-
-### Testing
+## Build, Run, Test
 
 ```bash
-cd "mef-spring-boot-integration"
-mvn test
+cd mef-spring-boot-integration
+export JAVA_HOME=$(/usr/libexec/java_home -v 17)   # Java 17 required; 8 too old, 21+/25 incompatible
+
+mvn clean package               # build
+mvn clean package -DskipTests   # build without tests
+mvn spring-boot:run             # run (JVM flags + A2A_TOOLKIT_HOME are preconfigured in pom.xml)
+mvn test -Dtest=Form941XmlGenerationTest          # single test class (offline)
+mvn test -Dtest=MefLoginIntegrationTest -Dmef.integration.test.enabled=true   # live ATS login test
 ```
 
-### Important JVM Requirements
+**⚠️ `mvn test` is not safe to run blindly:** `Form941SubmissionTest` is ungated and submits to live IRS ATS during a plain `mvn test` (unlike `MefLoginIntegrationTest`, which is gated behind `-Dmef.integration.test.enabled=true`).
 
-When running manually with `java -jar`, these JVM arguments are required for Java 17+ compatibility with the MeF SDK:
+**⚠️ Build prerequisites (verified missing 2026-08-28):** no JDK, no Maven, and no `~/.m2` exist on this machine — `brew install openjdk@17 maven` first. The SDK dependencies are normal Maven coordinates (`gov.irs.mef:mef-client-sdk:16.0`, `com.sun.xml.ws:webservices-*:4.0.4`, `org.apache.santuario:xmlsec:4.0.2`) — there is **no `lib/` directory**. Install the SDK JAR by hand or the project will not compile:
+
+```bash
+unzip -o "Version_16/A2A_Toolkit_Version16.0/MeF_Client_SDK/Java/dist/mef_client_sdk.zip" -d /tmp/mef_sdk
+mvn install:install-file -Dfile=/tmp/mef_sdk/mef_client_sdk/lib/mef_client_sdk.jar \
+  -DgroupId=gov.irs.mef -DartifactId=mef-client-sdk -Dversion=16.0 -Dpackaging=jar
+```
+
+When running a packaged JAR manually, these JVM args are mandatory for Java 17 + Metro/JAX-WS:
 
 ```bash
 java \
   -DA2A_TOOLKIT_HOME=./src/main/resources/mef_config \
-  -Djava.endorsed.dirs=./lib \
   --add-opens java.base/java.lang=ALL-UNNAMED \
   --add-exports java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED \
   --add-exports java.xml.crypto/com.sun.org.apache.xml.internal.security=ALL-UNNAMED \
@@ -50,375 +60,68 @@ java \
   -jar target/mef-spring-boot-integration-1.0.0.jar
 ```
 
-Note: These are automatically configured in `pom.xml` when using `mvn spring-boot:run`.
+XML validation without the app: `cd test-scenarios/schemas/941 && xmllint --noout --schema Return941.xsd ../../941-scenario-1-orchid-q1-2026/Return941-Scenario1.xml`
 
-## Architecture Overview
+## Architecture
 
-### Layered Architecture
+Standard layers under `src/main/java/com/irs/mef/`: `controller/` (REST), `service/` (SDK calls), `dto/`, `config/`, `exception/`. Server on `:8080`, context path `/api`.
 
-The application follows a standard Spring Boot layered architecture:
+**The central pattern — reflection for every SDK call.** All MeF SDK invocations go through `Class.forName("gov.irs.mef...")` + `getMethod().invoke()` to sidestep Java 17 module-access problems with the Metro stack. Follow this pattern for any new SDK operation (model: `MefClientService.login`).
 
-1. **Controllers** (`controller/`) - REST API endpoints exposing MeF operations
-   - `MefAuthController` - Login/logout endpoints
-   - `SubmissionController` - Tax return submission endpoints
-   - `AcknowledgementController` - Acknowledgment retrieval endpoints
+**Session model.** `MefClientService` performs certificate-only login (`LoginClient.invoke(ctx, keystoreFile, keystorePassword, keyAlias)`), extracts the SAML token, and stores the **`ServiceContext` as a singleton instance field**. Every subsequent SDK call MUST reuse `getCurrentServiceContext()` — a fresh `ServiceContext` invalidates the IRS session. State is not thread-safe and has no expiry handling; logout never actually calls `LogoutClient` (it only clears local state), which is the likely cause of IRS concurrent-session-limit errors that `RetryConfig`'s exponential backoff works around.
 
-2. **Services** (`service/`) - Business logic and MeF SDK integration
-   - `MefClientService` - Core SDK operations, session management, login/logout
-   - `SubmissionService` - Handles SendSubmissions calls
-   - `StatusService` - Query submission status
-   - `AcknowledgementService` - Retrieve acknowledgments
+**Submission pipeline** (`SubmissionService`): return XML string → in-memory `SubmissionXML` → generated manifest XML → `SubmissionBuilder.createIRSSubmissionArchive` → `PostmarkedSubmissionArchive` → container → `SendSubmissionsClient.invoke` → Deposit ID.
 
-3. **DTOs** (`dto/`) - Data transfer objects for API requests/responses
-   - Request/Response pairs for each operation (Login, Submit, Status, Ack)
+**Config flow:** `MefSdkConfig` binds `mef.sdk.*` from `application.yml`; secrets come from env vars or a `.env` file loaded by `DotenvEnvironmentPostProcessor` (system env wins). SDK-owned config (endpoints, XWSS security, transport, logging) lives in `src/main/resources/mef_config/config/` and is selected via `A2A_TOOLKIT_HOME`.
 
-4. **Configuration** (`config/`) - Spring configuration and property binding
-   - `MefSdkConfig` - Binds `application.yml` properties to Java objects
+### Implementation status (verified 2026-08-28)
 
-5. **Exception Handling** (`exception/`)
-   - `MefException` - Custom exception for MeF operations
-   - `GlobalExceptionHandler` - Centralized exception handling
+Working against ATS: **Login** (`MefClientService.java:69-203`), **SendSubmissions** (`SubmissionService.java:39-186`, manifest at `:272-311`), **GetSubmissionStatus** (`StatusService.java:38-142`), **GetNewAcks** (`AcknowledgementService.java:175-273`), **GetAck** (`AcknowledgementService.java:68-167` — its "ackId" param is really the submission ID), acks-by-submission via client-side filtering (`:286-394`), certificate diagnostics (`MefClientService.java:342-568`, `GET /mef/auth/test-certificate`).
 
-### MeF SDK Integration
+Stubbed / broken — do not trust these endpoints: **logout** (local-only, never calls `LogoutClient`; `MefClientService.java:210-245`), **GetNewSubmissionsStatus** (returns an empty list, `StatusService.java:149-199`), **createSubmissionArchive** (fabricates a path, `SubmissionService.java:197-234`), `/test/form941` (hardcoded absolute XML path pointing at a nonexistent directory, `SubmissionController.java:225`).
 
-The MeF Client SDK v16 JARs are located in `lib/` and referenced as system-scoped dependencies:
-- `mef_client_sdk.jar` - Core MeF SDK
-- `webservices-*.jar` - JAX-WS Metro libraries for SOAP services
-- `xmlsec-4.0.2.jar` - XML security for WS-Security
+Other traps: `RetryConfig` retries **every** `Exception` (including `MefException`s like `NOT_LOGGED_IN`) despite in-service "don't retry" comments; `getAcknowledgmentsBySubmission` drains the IRS ack queue (GetNewAcks marks acks retrieved server-side) and discards non-matching acks; every `MefException` maps to HTTP 500. Full defect list and per-class map with verified line numbers: `CODE_MAP.md` §7.
 
-SDK configuration files are in `src/main/resources/mef_config/`:
-- `ats_endpoints.properties` / `prd_endpoints.properties` - Service URLs
-- `*_client_security_config.xml` - WS-Security configurations
-- `transport.properties`, `audit_log.properties`, `logging.properties`
+## Hard-Won Gotchas (do not rediscover these)
 
-### Session Management
-
-The `MefClientService` maintains session state using reflection to call SDK classes:
-- SAML assertion obtained from login is stored and reused for subsequent operations
-- Session state is tracked with `isLoggedIn` flag
-- Session ID is generated for tracking purposes
-
-### SDK Implementation Status
-
-**Implementation Progress** (Last Updated: 2025-12-08):
-
-**✅ IMPLEMENTED AND WORKING**:
-1. **Login Service** (`MefClientService.java:62-141`)
-   - Certificate-based authentication with IRS MeF ATS
-   - SAML assertion retrieval and session management
-   - ServiceContext creation and preservation
-   - Status: ✅ WORKING - Successfully authenticating with ETIN 97661
-
-2. **SendSubmissions Service** (`SubmissionService.java:45-148`)
-   - In-memory submission object creation (SubmissionXML, SubmissionManifest)
-   - Manifest XML generation with required IRS fields
-   - SubmissionBuilder pattern usage for archive creation
-   - Submission ID validation (pattern: `[0-9]{13}[a-z0-9]{7}`)
-   - Status: ✅ WORKING - Successfully submitting to IRS and receiving Deposit ID
-
-3. **GetSubmissionStatus Service** (`StatusService.java:33-101`)
-   - Query submission processing status by submission ID
-   - Extracts StatusRecordList from MTOM attachment
-   - Returns status text, acknowledgment date, and disclaimer
-   - Status: ✅ WORKING - Successfully retrieving status from IRS
-
-4. **GetNewAcks Service** (`AcknowledgementService.java:98-188`)
-   - Retrieve new (not yet retrieved) acknowledgments
-   - Processes AcknowledgementList with validation errors
-   - Supports maxCount parameter (typically 100)
-   - Indicates if more acknowledgments are available
-   - Status: ✅ WORKING - Successfully retrieving acknowledgments from IRS
-
-**❌ NOT YET IMPLEMENTED**:
-- Logout service invocation (`MefClientService.java:157-177`)
-- GetNewSubmissionsStatus service (bulk status query)
-- GetAck service (retrieve specific acknowledgment by receipt ID)
-
-**📚 DETAILED DOCUMENTATION**:
-- **Form 941 Submission Guide**: `FORM_941_SUBMISSION_IMPLEMENTATION.md`
-  - Complete error resolution timeline
-  - Working code patterns for submission
-  - In-memory vs file-based object handling
-  - IRS service error investigation
-  - Success: Submission accepted with Deposit ID
-- **Submission ID Format**: `SUBMISSION_ID_FORMAT.md`
-  - Regex pattern requirements discovered via bytecode analysis
-  - Valid/invalid examples and testing methods
-- **Status and Acknowledgments Guide**: `STATUS_AND_ACK_SERVICES_DOCUMENTATION.md`
-  - Complete SOAP request/response specifications
-  - Full parameter documentation
-  - Example usage and REST API endpoints
-  - Troubleshooting guide
+1. **Submission ID:** exactly 20 chars, `[0-9]{13}[a-z0-9]{7}` = 6-digit EFIN + **`yyyyDDD` (year + day-of-year)** + 7 lowercase alphanumerics. The date must be the **current processing year**, not the tax-period year (`MEF00004` otherwise). `SUBMISSION_ID_FORMAT.md` is the authority; `FORM_941_SUBMISSION_IMPLEMENTATION.md` still teaches a superseded `YYYYmDD` format — ignore that part. Correct live code: `SubmissionController.java:206-211`.
+2. **In-memory SDK objects only:** file-based `SubmissionXML`/`SubmissionManifest` constructors break serialization (`InMemoryMethodOnFileBasedInstanceException`). Always `new SubmissionXML(filename, contentString)`.
+3. **Manifest is mandatory** (`MeFClientSDK000004` if null): SubmissionId, EFIN, GovernmentCd, FederalSubmissionTypeCd, TaxPeriodBeginDt/EndDt, TIN. `FederalSubmissionTypeCd` is currently hardcoded to `941` (`SubmissionService.java:288`).
+4. **EFIN ≠ ETIN** and one submission uses both: ETIN authenticates the A2A session *and* fills the manifest `<EFIN>` tag (despite the name); EFIN prefixes the submission ID and goes in the return XML `OriginatorGrp`. See `EFIN_ETIN_USAGE.md`.
+5. **Status/ack payloads arrive as MTOM ZIP attachments**, not in the SOAP body — the SDK unpacks them.
+6. **IRS needs ~2–5 minutes** after submission before status/acks exist; earlier queries return `NO_STATUS_FOUND`/empty.
+7. **Debugging:** IRS errors surface as generic `ErrorExceptionDetail`; the real SOAP fault is only in `a2a_sdk.log.*` (project root, rotating, level FINEST). App log: `logs/mef-spring-boot.log`.
+8. **Ack data quality:** EFIN may return `999999`, TIN/amounts often null — **EIN is the reliable identifier** for employer returns.
+9. `sdk-reference/extracted/` contains **no `.class` files on a fresh clone** (gitignored) — only WSDLs survive. Regenerate with `sdk-reference/scripts/generate-sdk-docs.sh` before relying on it.
 
 ## Configuration
 
-### Environment Variables
+Env vars (or `.env`, gitignored): `MEF_ETIN`, `MEF_EFIN`, `MEF_ASID`, `MEF_KEYSTORE_PATH`, `MEF_KEYSTORE_PASSWORD`, `MEF_KEYSTORE_TYPE` (default `PKCS12`), `MEF_KEY_ALIAS`, `MEF_KEY_PASSWORD`, optional `MEF_TRUSTSTORE_PATH`/`MEF_TRUSTSTORE_PASSWORD`, `A2A_TOOLKIT_HOME`. `MEF_USERNAME`/`MEF_PASSWORD` are declared but unused — authentication is certificate-only. No `.env` currently exists; recreate it with Pyramos values once issued.
 
-Required for IRS certificate-based authentication:
-```bash
-MEF_ETIN=your_etin
-MEF_ASID=your_asid
-MEF_KEYSTORE_PATH=/path/to/keystore.p12
-MEF_KEYSTORE_PASSWORD=your_keystore_password
-MEF_KEYSTORE_TYPE=PKCS12
-MEF_KEY_ALIAS=your_certificate_alias
-MEF_KEY_PASSWORD=your_key_password
-```
+Environment selection: `mef.sdk.environment` = `ATS` (test, `la.alt.www4.irs.gov`) or `PRD`. Known inconsistency: `application.yml` lists PRD as `www.irs.gov` while the SDK's `prd_endpoints.properties` uses `la.www4.irs.gov` — the SDK properties win; reconcile before production.
 
-**Note**: This implementation uses **certificate-only authentication**. Username/password authentication is not used. The certificate must be IRS-approved and properly configured in the keystore.
+## SDK Reference
 
-### Application Configuration
+Consult before implementing any SDK operation — never guess SDK APIs:
+- `mef-spring-boot-integration/sdk-reference/docs/` — `SDK_API_REFERENCE.md`, `SDK_QUICK_REF.md`, `SDK_WSDL_GUIDE.md`
+- `sdk-reference/extracted/META-INF/wsdl/` — authoritative WSDLs (`MeFTransmitterServicesMTOM.wsdl`, `MeFMSIServices.wsdl`)
+- `javap -classpath <path-to-mef_client_sdk.jar> -public gov.irs.mef.services.transmitter.SendSubmissionsClient` for exact signatures
 
-Primary configuration: `src/main/resources/application.yml`
-- Server runs on port 8080 with context path `/api`
-- Environment selection: `mef.sdk.environment` (ATS or PRD)
-- Timeouts: Connection and read timeouts (default 600 seconds)
-- Logging: DEBUG level for `com.irs.mef` and `gov.irs.mef`
+Key packages: `gov.irs.mef.services.msi.*` (Login/Logout), `gov.irs.mef.services.transmitter.*` (Submit/Status/Ack), `gov.irs.mef.services.data.*`, `gov.irs.a2a.mef.mefheader.*`.
 
-### Certificate Requirements
+## Pyramos Reporting Agent Work (current focus)
 
-IRS MeF requires X.509 client certificates for strong authentication:
-- Supported formats: PKCS12 (.p12, .pfx) or JKS
-- Certificate must be IRS-approved CA-signed
-- Configure via `MEF_KEYSTORE_PATH` and related environment variables
+What must change relative to the OneWell build:
 
-## REST API Endpoints
+1. **New IRS identifiers** — EFIN/ETIN from the e-file application (Reporting Agent + Transmitter provider options), ASID from Automated Enrollment, Reporting Agent PIN. Purge the OneWell values (97661 / 238689 / 23868900 / test EIN 003000004) hardcoded in `test-mef-login.sh`, `MefLoginIntegrationTest.java`, `Form941SubmissionTest.java`, `SubmissionController.java:239`, and the test scenario XML.
+2. **Return header changes** (see `94x-2026/.../ReturnHeader94x.xsd`): `OriginatorTypeCd` = `ReportingAgent` (currently `OnlineFiler`), replace `OnlineFilerPINGrp` with `ReportingAgentPINGrp` (`PIN`, `RAPINEnteredByCd=REPORTING AGENT`, `JuratDisclosureCd=REPORTING AGENT PIN`), add `ReportingAgent94XFilerGrp` identifying Pyramos alongside the per-client `<Filer>`.
+3. **Multi-tenancy**: per-client EIN/name/address/tax period in submissions, a client model with Form 8655 authorization status, and persistence of submission ↔ deposit ID ↔ status ↔ acknowledgment per client (IRS retention requirement). Today there is no persistence and `SubmitRequest` has no tenant field.
+4. **Session hygiene**: implement real logout via `LogoutClient`, add session expiry/refresh — required at Reporting Agent volume.
+5. **Certificate**: build the PKCS12 from `Pyramos Software Certificates/` (cert + SubCA1 + Root chain), register it in Automated Enrollment against the new ASID. Note both the old OneWell cert and the new Pyramos cert share `CN=c2s.pahealthmanagement.org` — only the `O=` differs; don't mix them up. Cert renewal due before 2027-08-21.
 
-Base URL: `http://localhost:8080/api`
+## Documentation Authority Notes
 
-### Authentication
-- `POST /mef/auth/login` - Login with ETIN, username, password
-- `POST /mef/auth/logout` - Logout from MeF
-- `GET /mef/auth/status` - Check session status
-
-### Submissions
-- `POST /mef/submissions/submit` - Submit tax return
-- `GET /mef/submissions/{submissionId}/status` - Get submission status
-- `GET /mef/submissions/status/new` - Get new submissions status
-
-### Acknowledgments
-- `GET /mef/acknowledgments/{ackId}` - Get specific acknowledgment
-- `GET /mef/acknowledgments/new` - Get new acknowledgments
-- `GET /mef/acknowledgments/submission/{submissionId}` - Get acks by submission
-
-## Development Notes
-
-### SDK Class Loading Pattern
-
-The codebase uses reflection to load MeF SDK classes dynamically (see `MefClientService.java:72-105`). This pattern should be followed when implementing other SDK operations:
-
-```java
-Class<?> serviceClass = Class.forName("gov.irs.mef.services.SomeService");
-Object serviceInstance = serviceClass.getDeclaredConstructor().newInstance();
-Object result = serviceClass.getMethod("methodName", paramTypes).invoke(serviceInstance, params);
-```
-
-### Form 941 Submission Implementation
-
-**Status**: Partially working - Login successful, submission encountering IRS service error
-
-**Complete Implementation Guide**: See `FORM_941_SUBMISSION_IMPLEMENTATION.md` for:
-- Detailed error resolution timeline (3 major errors solved)
-- Working code patterns for login and submission
-- In-memory vs file-based object handling (critical SDK requirement)
-- Submission ID format requirements (`[0-9]{13}[a-z0-9]{7}`)
-- Manifest XML generation and required fields
-- Current IRS service error investigation
-
-**Key Learnings**:
-1. **Submission ID Format**: Must be exactly 20 chars (13 digits + 7 lowercase alphanumeric)
-2. **Manifest Required**: Cannot be null, must include EFIN, TIN, tax period dates
-3. **In-Memory Objects**: SDK serialization requires in-memory constructors for SubmissionXML and SubmissionManifest
-4. **ServiceContext Preservation**: Must reuse same ServiceContext from login for all operations
-
-### Implementation Status by Service
-
-**✅ Implemented**:
-- `MefClientService.java:62-141` - Login service (WORKING)
-- `SubmissionService.java:45-148` - SendSubmissions service (PARTIAL - IRS error)
-- `SubmissionService.java:233-269` - Manifest XML generation
-- `MefClientService.java` - ServiceContext management
-
-**❌ TODO**:
-- `MefClientService.java:157-177` - Logout service invocation
-- `StatusService.java` - GetSubmissionStatus and GetNewSubmissionsStatus calls
-- `AcknowledgementService.java` - GetAck and GetNewAcks calls
-- IRS service error resolution (see FORM_941_SUBMISSION_IMPLEMENTATION.md)
-
-### Logs
-
-Application logs: `logs/mef-spring-boot.log`
-SDK audit logs: `logs/mef_audit_log.txt`
-SDK debug logs: `a2a_sdk.log.*` (in project root)
-
-### IRS Environments
-
-- **ATS** (Acceptance Testing System): Test environment at `https://la.alt.www4.irs.gov`
-- **PRD** (Production): Production environment at `https://www.irs.gov`
-
-Configure via `mef.sdk.environment` in `application.yml`.
-
-## SDK Reference Documentation (RECOMMENDED)
-
-**CRITICAL**: When implementing SDK integrations, ALWAYS consult the SDK reference documentation first to understand the actual API structure, method signatures, and available classes. Do not guess or assume SDK APIs exist.
-
-### Quick Start - SDK Documentation
-
-The MeF SDK has been **extracted and documented** for efficient development. Use these resources:
-
-**Primary Documentation** (located in `mef-spring-boot-integration/sdk-reference/docs/`):
-
-1. **SDK_API_REFERENCE.md** - Comprehensive API reference with all service classes, method signatures, and examples
-2. **SDK_WSDL_GUIDE.md** - WSDL service definitions and XML schemas
-3. **SDK_QUICK_REF.md** - Quick reference with code patterns and examples
-
-**Extracted SDK** (located in `mef-spring-boot-integration/sdk-reference/extracted/`):
-- All class files from `mef_client_sdk.jar` (310 service classes)
-- WSDL files in `META-INF/wsdl/` - Authoritative service definitions
-- XSD schemas for request/response structures
-
-### Efficient SDK Exploration Workflow
-
-**Step 1: Check the documentation first**
-```bash
-cd "mef-spring-boot-integration"
-
-# View API reference for all service classes
-cat sdk-reference/docs/SDK_API_REFERENCE.md
-
-# View WSDL guide for service definitions
-cat sdk-reference/docs/SDK_WSDL_GUIDE.md
-
-# View quick reference for code patterns
-cat sdk-reference/docs/SDK_QUICK_REF.md
-```
-
-**Step 2: Search extracted files (10-100x faster than javap)**
-```bash
-cd "mef-spring-boot-integration/sdk-reference/extracted"
-
-# Find all service client classes
-find gov/irs/mef/services -name "*Client.class"
-
-# Find classes by keyword
-find . -name "*Submission*.class"
-
-# Search for specific functionality
-grep -r "Acknowledgment" gov/irs/mef/services/
-```
-
-**Step 3: Inspect WSDL for authoritative service definitions**
-```bash
-# View transmitter services (Submit, Status, Ack)
-cat sdk-reference/extracted/META-INF/wsdl/MeFTransmitterServicesMTOM.wsdl
-
-# View MSI services (Login, Logout)
-cat sdk-reference/extracted/META-INF/wsdl/MeFMSIServices.wsdl
-
-# View XML schemas
-cat sdk-reference/extracted/META-INF/wsdl/MeFHeader.xsd
-```
-
-**Step 4: Use javap for detailed method signatures (when needed)**
-```bash
-# Inspect specific class
-javap -classpath lib/mef_client_sdk.jar -public gov.irs.mef.services.transmitter.SendSubmissionsClient
-```
-
-### Regenerating SDK Documentation
-
-If SDK documentation becomes outdated or you need to regenerate it:
-
-```bash
-cd "mef-spring-boot-integration/sdk-reference/scripts"
-./generate-sdk-docs.sh
-```
-
-This script will:
-- Analyze all SDK classes using javap
-- Generate comprehensive API reference
-- Create WSDL guide with all service definitions
-- Build quick reference with code patterns
-
-### Key SDK Packages
-
-The extracted SDK contains these key packages:
-
-- **`gov.irs.mef.services.msi.*`** - MSI services (Login, Logout)
-- **`gov.irs.mef.services.transmitter.*`** - Transmitter services (Submit, Status, Ack)
-- **`gov.irs.mef.services.data.*`** - Data objects (ETIN, etc.)
-- **`gov.irs.a2a.mef.mefheader.*`** - MeF headers (TestCdType, etc.)
-- **`gov.irs.mef.exception.*`** - Exception classes
-- **`gov.irs.mef.services.util.*`** - Utility classes
-
-### Workflow for Implementing New SDK Operations
-
-1. **Consult SDK_QUICK_REF.md** - Check for existing code patterns and examples
-2. **Review SDK_API_REFERENCE.md** - Find the service class and method signatures
-3. **Check WSDL files** - Understand request/response structures (most authoritative)
-4. **Search extracted files** - Use grep/find for fast discovery
-5. **Review existing code** - See `MefClientService.java:62-141` for reflection pattern
-6. **Implement using reflection** - Follow the established pattern
-7. **Test incrementally** - Verify each SDK call works before moving to the next
-
-### Example: Implementing SendSubmissions
-
-```bash
-# Step 1: Check quick reference
-cat sdk-reference/docs/SDK_QUICK_REF.md | grep -A 10 "Submit Example"
-
-# Step 2: View API reference
-cat sdk-reference/docs/SDK_API_REFERENCE.md | grep -A 20 "SendSubmissionsClient"
-
-# Step 3: Inspect WSDL for request/response structure
-cat sdk-reference/extracted/META-INF/wsdl/MeFTransmitterServicesMTOM.wsdl | grep -A 30 "SendSubmissions"
-
-# Step 4: Get exact method signature (if needed)
-javap -classpath lib/mef_client_sdk.jar -public gov.irs.mef.services.transmitter.SendSubmissionsClient
-```
-
----
-
-## Legacy JAR Inspection Methods (For Reference)
-
-The following methods are **legacy approaches** that required repeated tool invocations. They are preserved here for reference, but the **extracted SDK and documentation** above are now the recommended approach.
-
-<details>
-<summary>Click to expand legacy methods</summary>
-
-### Legacy Method 1: List JAR Contents
-
-```bash
-cd "mef-spring-boot-integration/lib"
-jar tf mef_client_sdk.jar | grep "services.*\.class$"
-```
-
-**Note:** This is slower than searching extracted files with `find` or `grep`.
-
-### Legacy Method 2: Inspect with javap
-
-```bash
-javap -classpath lib/mef_client_sdk.jar -public gov.irs.mef.services.msi.LoginClient
-```
-
-**Note:** This still works but requires knowing the exact class name. The extracted SDK documentation provides comprehensive API reference.
-
-### Legacy Method 3: Manual JAR Extraction
-
-```bash
-mkdir sdk_extracted && cd sdk_extracted
-jar xf ../lib/mef_client_sdk.jar
-```
-
-**Note:** This is now done automatically in `sdk-reference/extracted/`.
-
-</details>
-
-## References
-
-See `README.md` for:
-- Detailed certificate setup instructions
-- IRS MeF enrollment requirements
-- API endpoint documentation with examples
-- Troubleshooting common issues
-- Links to IRS documentation
+- `SUBMISSION_ID_FORMAT.md` — correct (day-of-year format). Overrides the submission-ID section of `FORM_941_SUBMISSION_IMPLEMENTATION.md`.
+- `STATUS_AND_ACK_SERVICES_DOCUMENTATION.md` — SOAP request/response specs for status/ack services.
+- `EFIN_ETIN_USAGE.md` — the EFIN/ETIN placement map.
+- `PROJECT_SUMMARY.md` and `SETUP-COMPLETE.md` — stale historical snapshots (OneWell-era, wrong paths); do not follow them.
